
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_costumer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/wl_blue"
    tools:context="com.example.yealm.takego2.controller.AddCostumer">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/createAcount"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/some_blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp" />
    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName" />
    <EditText
        android:id="@+id/IDEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ID"
        android:inputType="number" />
    <EditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phoneNumber"
        android:inputType="phone" />
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/creditCardNumberEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/creditCardNumber"
        android:inputType="number" />
<Space
    android:layout_width="wrap_content"
    android:layout_height="50dp" />
    <Button
        android:id="@+id/addCostumerButton"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_Costumer"
        android:textColor="#323575"
        android:textSize="25sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"

        android:background="@drawable/buttonshape"
        android:shadowColor="#496391"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

</LinearLayout>

