<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.yealm.takego2.controller.DetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />
        <TextView
            android:id="@+id/nameEditText"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:clickable="true"
            android:ems="10"
            android:text="Get help with Take&amp;Go"
            android:textColor="@color/some_blue"
            android:textSize="25dp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/ic_phone1"/>

            <TextView
                android:id="@+id/phonetext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autoLink="phone"
                android:clickable="true"
                android:ems="10"
                android:text="@string/PhoneText"
                android:textSize="18dp"
                android:textStyle="italic"
                android:textColor="@color/black"
                android:textColorLink="@color/dark_blue1"/>


        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_email"/>

        <TextView
            android:id="@+id/mailtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autoLink="email"
            android:clickable="true"
            android:ems="10"
            android:text="@string/MailText"
            android:textSize="18dp"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:textColorLink="@color/dark_blue1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_webset"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/webtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autoLink="web"
            android:clickable="true"
            android:ems="10"
            android:text="@string/webText"
            android:textSize="18dp"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:textColorLink="@color/dark_blue1"/>


    </LinearLayout>

    </LinearLayout>

</FrameLayout>

